	PR tree-optimization/24483 	* tree-ssa-loop-ivopts.c (aff_combination_add_elt): Move rest 	field to elts if possible.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@106440 138bc75d-0d04-0410-961f-82ee72b054a4